--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	h1= title
+	workarea 
+		column a
+		column b
+		column c
+		column d
+		column e
+		column f
