--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,12 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/stickyfooter.css')
+		script(type='text/javascript', src='/js/jquery182min.js')
+		script(type='text/javascript', src='/js/paging.js')
+		script(type='text/javascript', src='/js/ttrack.js')
+		// | <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 	body
+		
 		block content
+		//| <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
