--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ workarea
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:10px;
-	box-shadow: 0px 2px 5px #000;
+	box-shadow: 0px 2px 5px #999;
 	clear:both;
 	padding:5px;
 	width:90%;
@@ -76,6 +76,8 @@ workarea
 	background-color:#FFF;
 	position:relative;
 	overflow:hidden;
+	z-index:1;
+	
 }
 
 .row:hover
@@ -83,25 +85,40 @@ workarea
 	background-color:#EFEFEF;
 }
 
+.row.timer
+{
+
+}
+
 .row.add
 {
-	text-align:center;
-	font-size:30px;
-	font-weight:bold;
-	width:75px;
-	height:25px;
+	position:relative;
+	top:-15px;
+	width:250px;
+	height:20px;
 	background-color:#FFF;
-	-webkit-border-top-right-radius: 0px;
-	-webkit-border-bottom-right-radius: 0px;
-	-moz-border-radius-topright: 0px;
-	-moz-border-radius-bottomright: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-right-radius: 0px;
+	
+	-webkit-border-radius: 9px;
+	-moz-border-radius: 9px;
+	border-radius: 9px;
+	
+	z-index:0;
 }
 
 .row.add:hover
 {
 	background-color:Lime;
+}
+
+.stretchout
+{
+	position:absolute;
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	z-index:1;
+	background-image:url('/images/Empty.gif');
 }
 
 p.time
@@ -110,7 +127,6 @@ p.time
 	float:left;
 	font-family:'digital7mono';
 	font-size:50px;
-	width:25%;
 	background-color:black;
 	color:lime;
 	
