--- a/views/index.jade
+++ b/views/index.jade
@@ -6,13 +6,17 @@ block content
 			#header
 				h1= title
 			workarea
-				.row
+				.row.timer
 					p.time 00:00
 					
 					a.del(href="#")
 						img(src="/images/del.png")
+						
 				
-				.row.add +
+				
+				.row.add
+					a(href="#")
+						span.stretchout
 					
 				
 	#footer
