minor style tweak

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ workarea
 	box-shadow: 0px 2px 5px #999;
 	clear:both;
 	padding:5px;
-	width:90%;
+	width:61.80339887%;
 	height:50px;
 	background-color:#FFF;
 	position:relative;
@@ -148,7 +148,7 @@ a.del
 	float:right;
 	position:relative;
 	top:12px;
-	width:5%;
+	width:25px;
 	
 }
 
