--- a/views/index.jade
+++ b/views/index.jade
@@ -5,18 +5,19 @@ block content
 		#main
 			#header
 				h1= title
-			workarea
-				.row.timer
-					p.time 00:00
-					
-					a.del(href="#")
-						img(src="/images/del.png")
+				
+			#workarea
+				//.row
+				//	p.time 00:00
+				//		a(href="#")
+				//			span.stretchout
+				//	
+				//	a.del(href="#")
+				//		img(src="/images/del.png")
 						
-				
-				
-				.row.add
-					a(href="#")
-						span.stretchout
+			.adder
+				a(href="#")
+					span.stretchout
+						center +
 					
-				
 	#footer
