--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,19 @@ html
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/stylesheets/stickyfooter.css')
 		script(type='text/javascript', src='/js/jquery182min.js')
+		script(type='text/javascript', src='/js/jintervals.js')
+		//script(type='text/javascript', src='/js/jquery.stopwatch.js')
+		script(type='text/javascript', src='/js/jq.stopwatch.min')
+		| <style type="text/css">
+		| @-moz-document url-prefix() {
+		|	p.time {
+		|		margin-top:-10px;
+		|		padding-top:6px;
+		|	}}
+		| </style>
+		
 		script(type='text/javascript', src='/js/init.js')
+
 		// | <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 	body
 		
