more layout, most js done besides timers

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,12 +61,6 @@ h1
 
 .row
 {
-	-webkit-border-top-right-radius: 10px;
-	-webkit-border-bottom-right-radius: 10px;
-	-moz-border-radius-topright: 10px;
-	-moz-border-radius-bottomright: 10px;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:10px;
@@ -89,16 +83,17 @@ h1
 
 .adder
 {
+	padding-top:10px;
 	box-shadow:0px 2px 5px #999;
 	background-color:#FFF;
 	border-radius:9px;
 	clear:both;
 	display:block;
-	font-size:14px;
+	font-size:25px;
 	height:20px;
 	margin-bottom:0px;
 	margin-left:auto;
-	margin-right:auto;
+	margin-right:20%;
 	margin-top:5px;
 	overflow-x:hidden;
 	overflow-y:hidden;
@@ -106,7 +101,27 @@ h1
 	position:relative;
 	top:-15px;
 	width:100px;
+	
 	z-index:0;
+}
+
+.adder a span.stretchout center
+{
+	padding-top:6px;
+}
+
+.adder.solo
+{
+	box-shadow:0px 2px 15px #555;
+	font-size:50px;
+	clear:right;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+.adder.solo a span.stretchout center
+{
+	padding-top:15px;
 }
 
 .adder:hover
@@ -122,9 +137,7 @@ h1
 	top:0;
 	left:0;
 	z-index:1;
-	padding-top:8px;
 	background-image:url('/images/Empty.gif');
-	font-size:20px;
 	color:#888;
 }
 
@@ -160,19 +173,26 @@ a.del
 	
 }
 
-.textfield
+input.label
 {
-	margin-left:auto;
-	margin-right:auto;
-	position:relative;
-	top:12px;
-	height:25px;
-
+	border:none;
+	width:67.8%;
+	background-color:transparent;
+	height:50px;
+	position:absolute;
+	top:6%;
+	font-size:40px;
+	color:#666;
 }
 
-.textfield input
-{
-	width:60%;
+input::-webkit-input-placeholder {
+    color:    #DDD;
+}
+input:-moz-placeholder {
+    color:    #DDD;
+}
+input:-ms-input-placeholder {
+    color:    #DDD;
 }
 
 
