--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
 		script(type='text/javascript', src='/js/jquery182min.js')
 		script(type='text/javascript', src='/js/jintervals.js')
 		//script(type='text/javascript', src='/js/jquery.stopwatch.js')
-		script(type='text/javascript', src='/js/jq.stopwatch.min')
+		script(type='text/javascript', src='/js/jq.stopwatch.min.js')
 		| <style type="text/css">
 		| @-moz-document url-prefix() {
 		|	p.time {
