--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@ body
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;	
 	height:100%;
 	width:100%;
-	overflow:hidden;
+	
 }
 
 @font-face
@@ -143,25 +143,25 @@ h1
 
 p.time
 {
-	position:relative;
-	float:left;
 	font-family:'digital7mono';
 	font-size:50px;
 	background-color:black;
 	color:lime;
 	box-shadow:5px 0px 18px #BBB;
+	cursor:pointer;
 	
+	position:relative;
+	float:left;
 	margin-left:-5px;
 	padding-left:15px;
 	margin-right:15px;
 	padding-right:15px;
-	height:60px;
-	
 	margin-top:-5px;
 	padding-top:5px;
 	margin-bottom:0px;
 	
 	width:121px;
+	height:60px;
 }
 
 a.del
@@ -180,7 +180,7 @@ input.label
 	background-color:transparent;
 	height:50px;
 	position:absolute;
-	top:6%;
+	top:10px;
 	font-size:40px;
 	color:#666;
 }
@@ -193,6 +193,10 @@ input:-moz-placeholder {
 }
 input:-ms-input-placeholder {
     color:    #DDD;
+}
+
+*:focus {
+	outline:none;
 }
 
 
