--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
 		
 		script(type='text/javascript', src='/js/init.js')
 
-		// | <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+		| <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 	body
 		
 		block content
