--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,17 +6,22 @@ html
 		link(rel='stylesheet', href='/stylesheets/stickyfooter.css')
 		script(type='text/javascript', src='/js/jquery182min.js')
 		script(type='text/javascript', src='/js/jintervals.js')
+		script(type='text/javascript', src='/js/jquery-ui-1.9.1.custom.min.js');
+		script(type='text/javascript', src='/js/jquery.wiggle.js');
 		| <style type="text/css">
 		| @-moz-document url-prefix() {
 		|	p.time {
 		|		margin-top:-10px;
 		|		padding-top:6px;
-		|	}}
+		|	}
+		|   #header {
+		|		margin-top:-30px;
+		|		padding-bottom:30px;
+		|	}
+		|}
 		| </style>
 		
-		script(type='text/javascript', src='/js/init.js')
-
-		| <a href="https://github.com/mmmeff/ttrack.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+		script(type='text/javascript', src='/js/ttrack.js')
 	body
 		
 		block content
